# gideon_task

./: CMakeCache.txt  CMakeLists.txt  ImageProcessing  Makefile  README.md  cmake_install.cmake  image_processing.cpp  image_processing.cu
gideon_task/: README.md
include/: image_processing.cuh  image_processing.h
src/: image_processing.cpp  image_processing.cu  image_processing_kernels.cu
